--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-02-10T17:53:22Z</date>
+						<date>2022-02-14T16:15:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -884,8 +884,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rxNW6m3lmcnO
-								TA7OiL3bAw==
+								TPi63NOUM8KL
+								E6MD9LhSSA==
 								</data>
 								<key>Size</key>
 								<integer>500885</integer>
@@ -894,8 +894,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zESM63PmgVCy
-								1TRYDxylqA==
+								nD6tV5dEBRzS
+								pF7PGk3ctg==
 								</data>
 								<key>Size</key>
 								<integer>28658</integer>
@@ -904,11 +904,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BBhOsHsXYK2h
-								7MGr0u6eiw==
+								DIHddbzyygwi
+								Dizb6CDbTQ==
 								</data>
 								<key>Size</key>
-								<integer>318155</integer>
+								<integer>318663</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
