--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/3-NetSci-2019/ChildPages/5-NetSci-Speakers/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/3-NetSci-2019/ChildPages/5-NetSci-Speakers/Data/Contents.plist
@@ -2442,12 +2442,12 @@
 				C24AAAtvAAABQAAAC3EAAAA7AAALcwAAC3QAAAt1AAAL
 				dgAAC3cAAAt4AAALeQAAADkAAAt7AAAAOwAAC30AAAt+
 				AAAAOQAAADkAAAA5AAALggAAC4MAAAuEAAAAOwAAADkA
-				AAA5AAALiAAAC4kAAABaAAAAOQAAADkAAAuNAAAAOwAA
-				C48AAAA5gQJJgQJKgAaBAkuBAleABYECWYECWoAFgAWA
+				AAA5AAALiAAAC4kAAABaAAAAOQAAADkAAAA5AAALjgAA
+				C48AAAA7gQJJgQJKgAaBAkuBAleABYECWYECWoAFgAWA
 				4oALgQJcgKeABYECXYAGgAaAw4ECXoECYIAugQJhgAWB
 				AmSBAmeBAmiBAmmBAmqBAmuBAmyABoECbYAFgQJugQJw
 				gAaABoAGgQJygQJzgQJ1gAWABoAGgQJ2gQJ3gAmABoAG
-				gQJ4gAWBAnuABoAXWG1lbnVGb250VXN0eWxlW2ZpeGVk
+				gAaBAniBAnuABYAXWG1lbnVGb250VXN0eWxlW2ZpeGVk
 				U2hhZG93WmhhbGZIZWlnaHRZbG9nb1NtYWxsXxAPaGlk
 				ZVRpdGxlTW9iaWxlVWFsaWduWWxvZ29MYXJnZVpzaG93
 				UGFyZW50WHNob3dMb2dvWHRpdGxlVGFnWG5hdkluZGV4
@@ -2463,8 +2463,8 @@
 				bVl0ZXh0Q29sb3JdZnVsbFdpZHRoTWVudVdjb250YWlu
 				XGN1c3RvbVNpemluZ1picmVha3BvaW50VnNsb2dhbltm
 				aXhlZE9mZnNldF8QD2NvbGxhcHNlSGVhZGluZ1t6b25l
-				RGl2aWRlclhmb250U2l6ZV8QEGhpZGVTbG9nYW5Nb2Jp
-				bGVfEBBzdWJtZW51SW5kaWNhdG9yXxAQZm9udC1mYW1p
+				RGl2aWRlcl8QEHN1Ym1lbnVJbmRpY2F0b3JYZm9udFNp
+				emVfEBBoaWRlU2xvZ2FuTW9iaWxlXxAQZm9udC1mYW1p
 				bHktdGV4dFVzb2xpZNMAAACxAAAAdwAAACwAAAvKAAAL
 				0QAAALSmAAALywAAC8wAAAvNAAALzgAAC88AAAvQgQJM
 				gQJNgQJOgQJPgQJQgQJRpgAAC9IAAAvTAAAAOwAAC9UA
@@ -5034,11 +5034,11 @@
 				ACwAACzDAAAAe6QAAABaAAAAWgAAAFoAAABagAmACYAJ
 				gAmADdIAAAB3AAAALAAALMoAAAB7pAAAAFoAAABaAAAA
 				WgAAAFqACYAJgAmACYAN0wAAALEAAAB3AAAALAAALNEA
-				ACzYAAAAtKYAACzSAAACmQAALNQAACzVAAAs1gAALNeB
-				B52AzIEHnoEHn4EHoIEHoaYAAAA5AAAAUgAALNsAAABa
-				AAAAYgAALN6ABoALgQeigAmACIEHo4AXWGluZmluaXRl
-				V2FuaW1hdGVVZGVsYXlWb2Zmc2V0WGR1cmF0aW9uWGZh
-				ZGVJblVwEQMg0gAAAHcAAAAsAAAs6AAAAMOhAAAs6YEH
+				ACzYAAAAtKYAACzSAAAs0wAALNQAACzVAAAs1gAAApmB
+				B52BB56BB5+BB6CBB6GAzKYAAAA5AAAs2gAALNsAAABa
+				AAAAYgAAAFKABoEHooEHo4AJgAiAC4AXWGluZmluaXRl
+				WGR1cmF0aW9uV2FuaW1hdGVVZGVsYXlWb2Zmc2V0EQMg
+				WGZhZGVJblVw0gAAAHcAAAAsAAAs6AAAAMOhAAAs6YEH
 				pYAp3xAqAAAADwAAABAAAAARAAAAEgAAABMAAAAUAAAA
 				FQAAABYAAAAXAAAAGAAAABkAAAAaAAAAGwAAABwAAAAd
 				AAAAHgAAAB8AAAAgAAAAIQAAACIAAAAjAAAAJAAAACUA
@@ -22481,10 +22481,10 @@
 				CYAJgAmACYAN0gAAAHcAAAAsAAELuwAAAHukAAAAWgAA
 				AFoAAABaAAAAWoAJgAmACYAJgA3SAAAAdwAAACwAAQvC
 				AAAAe6QAAABaAAAAWgAAAFoAAABagAmACYAJgAmADdMA
-				AACxAAAAdwAAACwAAQvJAAEL0AAAALSmAAAs0gAALNcA
-				ACzUAAAs1QAALNYAAAKZgQedgQehgQeegQefgQeggMym
-				AAAAOQAALN4AACzbAAAAWgAAAGIAAABSgAaBB6OBB6KA
-				CYAIgAuAF9IAAAB3AAAALAABC9kAAADDoQABC9qBJ3SA
+				AACxAAAAdwAAACwAAQvJAAEL0AAAALSmAAAs0gAAApkA
+				ACzUAAAs1QAALNYAACzTgQedgMyBB5+BB6CBB6GBB56m
+				AAAAOQAAAFIAACzbAAAAWgAAAGIAACzagAaAC4EHo4AJ
+				gAiBB6KAF9IAAAB3AAAALAABC9kAAADDoQABC9qBJ3SA
 				Kd8QKgAAAA8AAAAQAAAAEQAAABIAAAATAAAAFAAAABUA
 				AAAWAAAAFwAAABgAAAAZAAAAGgAAABsAAAAcAAAAHQAA
 				AB4AAAAfAAAAIAAAACEAAAAiAAAAIwAAACQAAAAlAAAA
@@ -23858,9 +23858,9 @@
 				HoAAAAB7pAAAAFoAAABaAAAAWgAAAFqACYAJgAmACYAN
 				0gAAAHcAAAAsAAEehwAAAHukAAAAWgAAAFoAAABaAAAA
 				WoAJgAmACYAJgA3TAAAAsQAAAHcAAAAsAAEejgABHpUA
-				AAC0pgAALNIAACzXAAAs1AAALNUAACzWAAACmYEHnYEH
-				oYEHnoEHn4EHoIDMpgAAADkAACzeAAAs2wAAAFoAAABi
-				AAAAUoAGgQejgQeigAmACIALgBfSAAAAdwAAACwAAR6e
+				AAC0pgAALNIAACzTAAAs1AAALNUAACzWAAACmYEHnYEH
+				noEHn4EHoIEHoYDMpgAAADkAACzaAAAs2wAAAFoAAABi
+				AAAAUoAGgQeigQejgAmACIALgBfSAAAAdwAAACwAAR6e
 				AAAAw6EAAR6fgSo1gCnfECoAAAAPAAAAEAAAABEAAAAS
 				AAAAEwAAABQAAAAVAAAAFgAAABcAAAAYAAAAGQAAABoA
 				AAAbAAAAHAAAAB0AAAAeAAAAHwAAACAAAAAhAAAAIgAA
@@ -24369,9 +24369,9 @@
 				AABaAAAAWoAJgAmACYAJgA3TAAAAsQAAAHcAAAAsAAEl
 				fAABJZYAAAC0rxAZAAElfQAAEHYAAAIyAAAZsAAAA4gA
 				ASWCAAElgwABJYQAASWFAAElhgABJYcAASWIAAEliQAB
-				JYoAASWLAAEljAABJY0AAAtWAAEljwABJZAAASWRAAEl
+				JYoAASWLAAEljAABJY0AAAtXAAEljwABJZAAASWRAAEl
 				kgABJZMAASWUAAEllYErS4EDDoBigQSOgMGBK0yBK02B
-				K06BK0+BK1CBK1GBK1KBK1OBK1SBK1WBK1aBK1eBAkaB
+				K06BK0+BK1CBK1GBK1KBK1OBK1SBK1WBK1aBK1eBAkeB
 				K1iBK1mBK1qBK1uBK1yBK12BK16vEBkAASWXAAElmAAB
 				JZkAAAA5AAAAOwABJZwAAAKTAAACkwABJZ8AASWgAAEl
 				oQAAADkAASWjAAElpAAAADkAAAA5AAElpwABJagAAAA5
@@ -24466,10 +24466,10 @@
 				zwAAAHukAAAAWgAAAFoAAABaAAAAWoAJgAmACYAJgA3T
 				AAAAsQAAAHcAAAAsAAEm1gABJvAAAAC0rxAZAAEm1wAA
 				EHYAAAIyAAAZsAAAA4gAASWCAAElgwABJt4AASbfAAEm
-				4AABJuEAASWIAAEm4wABJYoAASblAAEljAABJY0AAAtW
+				4AABJuEAASWIAAEm4wABJYoAASblAAEljAABJY0AAAtX
 				AAEljwABJuoAASWRAAEm7AABJu0AASbuAAEllYErj4ED
 				DoBigQSOgMGBK0yBK02BK5CBK5GBK5KBK5OBK1KBK5SB
-				K1SBK5WBK1aBK1eBAkaBK1iBK5aBK1qBK5eBK5iBK5mB
+				K1SBK5WBK1aBK1eBAkeBK1iBK5aBK1qBK5eBK5iBK5mB
 				K16vEBkAASbxAAEm8gABJvMAAAA5AAAAOwABJZwAAAKT
 				AAACkwABJZ8AASb6AAEloQAAADkAASWjAAElpAAAADkA
 				AAA5AAElpwABJagAAAA5AAEnBAAAEIgAAAuCAAElrQAA
@@ -24561,9 +24561,9 @@
 				gAmADdMAAACxAAAAdwAAACwAASgeAAEoOAAAALSvEBkA
 				ASgfAAAQdgAAAjIAABmwAAADiAABJYIAASWDAAEoJgAB
 				KCcAASgoAAEoKQABJYgAASgrAAEligABKC0AASWMAAEl
-				jQAAC1YAASWPAAEoMgABJZEAASg0AAEoNQABKDYAASWV
+				jQAAC1cAASWPAAEoMgABJZEAASg0AAEoNQABKDYAASWV
 				gSvDgQMOgGKBBI6AwYErTIErTYErxIErxYErxoErx4Er
-				UoEryIErVIEryYErVoErV4ECRoErWIEryoErWoEry4Er
+				UoEryIErVIEryYErVoErV4ECR4ErWIEryoErWoEry4Er
 				zIErzYErXq8QGQABKDkAASg6AAEoOwAAADkAAAA7AAEl
 				nAAAApMAAAKTAAElnwABKEIAASWhAAAAOQABJaMAASWk
 				AAAAOQAAADkAASWnAAEoSgAAADkAAShMAAAQiAAAC4IA
@@ -24653,10 +24653,10 @@
 				XwAAAHukAAAAWgAAAFoAAABaAAAAWoAJgAmACYAJgA3T
 				AAAAsQAAAHcAAAAsAAEpZgABKYAAAAC0rxAZAAElfQAA
 				EHYAAAIyAAAZsAAAA4gAASWCAAElgwABJYQAASWFAAEl
-				hgABJYcAASWIAAEliQABJYoAASWLAAEljAABJY0AAAtW
+				hgABJYcAASWIAAEliQABJYoAASWLAAEljAABJY0AAAtX
 				AAEljwABJZAAASWRAAElkgABJZMAASWUAAEllYErS4ED
 				DoBigQSOgMGBK0yBK02BK06BK0+BK1CBK1GBK1KBK1OB
-				K1SBK1WBK1aBK1eBAkaBK1iBK1mBK1qBK1uBK1yBK12B
+				K1SBK1WBK1aBK1eBAkeBK1iBK1mBK1qBK1uBK1yBK12B
 				K16vEBkAASmBAAEpggABKYMAAAA5AAAAOwABJZwAAAKT
 				AAACkwABJZ8AASmKAAEloQAAADkAASWjAAElpAAAADkA
 				AAA5AAElpwABKEoAAAA5AAElqgAAEIgAAAuCAAElrQAA
@@ -24768,9 +24768,9 @@
 				AAAsAAEq/wAAAHukAAAAWgAAAFoAAABaAAAAWoAJgAmA
 				CYAJgA3SAAAAdwAAACwAASsGAAAAe6QAAABaAAAAWgAA
 				AFoAAABagAmACYAJgAmADdMAAACxAAAAdwAAACwAASsN
-				AAErFAAAALSmAAAs0gAALNcAACzUAAAs1QAALNYAAAKZ
-				gQedgQehgQeegQefgQeggMymAAAAOQAALN4AACzbAAAA
-				WgAAAGIAAABSgAaBB6OBB6KACYAIgAuAF9IAAAB3AAAA
+				AAErFAAAALSmAAAs0gAALNMAACzUAAAs1QAALNYAAAKZ
+				gQedgQeegQefgQeggQehgMymAAAAOQAALNoAACzbAAAA
+				WgAAAGIAAABSgAaBB6KBB6OACYAIgAuAF9IAAAB3AAAA
 				LAABKx0AAADDoQABKx6BLC6AKd8QKgAAAA8AAAAQAAAA
 				EQAAABIAAAATAAAAFAAAABUAAAAWAAAAFwAAABgAAAAZ
 				AAAAGgAAABsAAAAcAAAAHQAAAB4AAAAfAAAAIAAAACEA
@@ -25137,9 +25137,9 @@
 				AIEDF4EEloEEl4EEmIEDHYEEmYEDnK8QGgAAADkAATAf
 				AAACkwABMCEAATAiAAAC4wAAApMAAAA5AAAZzQABJa0A
 				ATAoAAALggAAADkAATArAAAAOwAAEIgAABnWAAEwLwAA
-				LN4AATAxAAAAOQABMDMAAAA7AAAAOwABMDYAAAKTgAaB
+				LNoAATAxAAAAOQABMDMAAAA7AAAAOwABMDYAAAKTgAaB
 				LQGAw4EtA4EtBYEBH4DDgAaBBKCBK26BLQiBAnKABoEt
-				CoAFgQMcgQSmgS0LgQejgS0NgAaBLQ6ABYAFgS0QgMOA
+				CoAFgQMcgQSmgS0LgQeigS0NgAaBLQ6ABYAFgS0QgMOA
 				F1ptZWRpdW1MaW5rW3NpemVQZXJjZW50XXNtYWxsTWF4
 				V2lkdGhebWVkaXVtTWF4V2lkdGhabG9hZEhlaWdodFps
 				b2FkTW9iaWxlXWxhcmdlTWF4V2lkdGjXAAADegAAACwA
@@ -25506,10 +25506,10 @@
 				gS25gQMQgS26gQMTgS27gS28gQIagQMVgQSUgS29gQMX
 				gQSWgQSXgQSYgQMdgQSZgQOcrxAaAAAAOQABNVcAAAKT
 				AAEwIQABNVoAAALoAAACkwAAADkAABnNAAElrQABNWAA
-				AAuCAAAAOQAAAuMAAAA7AAAQiAAAGdYAATVnAAAs3gAB
+				AAuCAAAAOQAAAuMAAAA7AAAQiAAAGdYAATVnAAAs2gAB
 				NWkAAAA5AAEwMwAAADkAAAA7AAE1bgAAApOABoEtvoDD
 				gS0DgS3AgQEhgMOABoEEoIErboEtw4ECcoAGgQEfgAWB
-				AxyBBKaBLcWBB6OBLceABoEtDoAGgAWBLciAw4AXWm1l
+				AxyBBKaBLcWBB6KBLceABoEtDoAGgAWBLciAw4AXWm1l
 				ZGl1bUxpbmtbc2l6ZVBlcmNlbnRdc21hbGxNYXhXaWR0
 				aF5tZWRpdW1NYXhXaWR0aFpsb2FkSGVpZ2h0WmxvYWRN
 				b2JpbGVdbGFyZ2VNYXhXaWR0aNcAAAN6AAAALAAAA3sA
@@ -25777,9 +25777,9 @@
 				FYEElIEuR4EDF4EEloEEl4EEmIEDHYEEmYEDnK8QGgAA
 				ADkAATkpAAACkwABMCEAATksAAAC6AAAApMAAAA5AAAZ
 				zQABJa0AATkyAAALggAAADkAAALjAAAAOwAAEIgAABnW
-				AAE5OQAALN4AATk7AAAAOQABMDMAAAA5AAAAOwABOUAA
+				AAE5OQAALNoAATk7AAAAOQABMDMAAAA5AAAAOwABOUAA
 				AAKTgAaBLkiAw4EtA4EuSoEBIYDDgAaBBKCBK26BLk2B
-				AnKABoEBH4AFgQMcgQSmgS5PgQejgS5RgAaBLQ6ABoAF
+				AnKABoEBH4AFgQMcgQSmgS5PgQeigS5RgAaBLQ6ABoAF
 				gS5SgMOAF1ptZWRpdW1MaW5rW3NpemVQZXJjZW50XXNt
 				YWxsTWF4V2lkdGhebWVkaXVtTWF4V2lkdGhabG9hZEhl
 				aWdodFpsb2FkTW9iaWxlXWxhcmdlTWF4V2lkdGjXAAAD
@@ -25875,10 +25875,10 @@
 				gQMQgS52gQMTgS53gS54gQIagQMVgQSUgS55gQMXgQSW
 				gQSXgQSYgQMdgQSZgQOcrxAaAAAAOQABOoIAAAKTAAEw
 				IQABOoUAAALoAAACkwAAADkAABnNAAElrQABOosAAAuC
-				AAAAOQAAAuMAAAA7AAAQiAAAGdYAATqSAAAs3gABOpQA
+				AAAAOQAAAuMAAAA7AAAQiAAAGdYAATqSAAAs2gABOpQA
 				AAA5AAEwMwAAADkAAAA7AAE6mQAAApOABoEueoDDgS0D
 				gS58gQEhgMOABoEEoIErboEuf4ECcoAGgQEfgAWBAxyB
-				BKaBLoGBB6OBLoOABoEtDoAGgAWBLoSAw4AXWm1lZGl1
+				BKaBLoGBB6KBLoOABoEtDoAGgAWBLoSAw4AXWm1lZGl1
 				bUxpbmtbc2l6ZVBlcmNlbnRdc21hbGxNYXhXaWR0aF5t
 				ZWRpdW1NYXhXaWR0aFpsb2FkSGVpZ2h0WmxvYWRNb2Jp
 				bGVdbGFyZ2VNYXhXaWR0aNcAAAN6AAAALAAAA3sAAAN8
@@ -25974,9 +25974,9 @@
 				gS6pgS6qgQIagQMVgQSUgS6rgQMXgQSWgQSXgQSYgQMd
 				gQSZgQOcrxAaAAAAOQABO9sAAAKTAAEwIQABO94AAALo
 				AAACkwAAADkAABnNAAElrQABO+QAAAuCAAAAOQAAAuMA
-				AAA7AAAQiAAAGdYAATvrAAAs3gABO+0AAAA5AAEwMwAA
+				AAA7AAAQiAAAGdYAATvrAAAs2gABO+0AAAA5AAEwMwAA
 				ADkAAAA7AAE78gAAApOABoEurIDDgS0DgS6ugQEhgMOA
-				BoEEoIErboEusYECcoAGgQEfgAWBAxyBBKaBLrOBB6OB
+				BoEEoIErboEusYECcoAGgQEfgAWBAxyBBKaBLrOBB6KB
 				LrWABoEtDoAGgAWBLraAw4AXWm1lZGl1bUxpbmtbc2l6
 				ZVBlcmNlbnRdc21hbGxNYXhXaWR0aF5tZWRpdW1NYXhX
 				aWR0aFpsb2FkSGVpZ2h0WmxvYWRNb2JpbGVdbGFyZ2VN
@@ -26849,13 +26849,13 @@
 				AAE5hQABOYgAATmLAAE5jgABOZEAATmUAAE5lgABOZkA
 				ATmbAAE5ngABOaEAATmjAAE5pQABOacAATmqAAE5rQAB
 				ObAAATmyAAE5tAABObYAATm5AAE5vAABOb4AATnAAAE5
-				wgABOcUAATnHAAE5ygABOcwAATnOAAE51wABOd0AATnp
+				wgABOcQAATnHAAE5ygABOcwAATnOAAE51wABOd0AATnp
 				AAE59AABOf4AAToQAAE6FgABOiAAATorAAE6NAABOj0A
 				ATpGAAE6SwABOlQAATphAAE6ZwABOnIAATp6AAE6fwAB
 				OocAATqMAAE6lwABOqIAATqqAAE6tAABOsYAATrSAAE6
 				3AABOuYAATrsAAE6+gABOwUAATsPAAE7GQABOyAAATss
 				AAE7OAABO0cAATtSAAE7ZQABO3AAATt6AAE7iAABO5AA
-				ATudAAE7qAABO68AATu7AAE7zQABO9kAATviAAE79QAB
+				ATudAAE7qAABO68AATu7AAE7zQABO9kAATvsAAE79QAB
 				PAgAATwbAAE8IQABPDoAATxTAAE8VgABPFkAATxcAAE8
 				XwABPGIAATxlAAE8fgABPIEAATyEAAE8hgABPIkAATyM
 				AAE8jwABPJEAATyWAAE8mQABPJ8AATykAAE8rQABPLIA
@@ -27881,9 +27881,9 @@
 				AAKGnwAChqEAAoajAAKGpQAChqcAAoa4AAKGyQAChssA
 				AobNAAKGzwAChtEAAobTAAKG5AAChvUAAob3AAKG+QAC
 				hvsAAob9AAKG/wAChxAAAochAAKHIwAChyUAAocnAAKH
-				KQAChysAAodEAAKHXQACh2AAAodiAAKHZQACh2gAAodr
-				AAKHbgACh4cAAoeJAAKHiwACh44AAoeQAAKHkgACh5UA
-				AoeXAAKHoAACh6gAAoeuAAKHtQACh74AAofHAAKHygAC
+				KQAChysAAodEAAKHXQACh2AAAodjAAKHZgACh2kAAods
+				AAKHbgACh4cAAoeJAAKHjAACh48AAoeRAAKHkwACh5UA
+				AoeXAAKHoAACh6kAAoexAAKHtwACh74AAofBAAKHygAC
 				h9sAAofgAAKH4wACh+UAAok4AAKJOgACiTwAAok+AAKJ
 				QQACiUMAAolGAAKJSAACiUsAAolNAAKJUAACiVIAAolU
 				AAKJVgACiVkAAolbAAKJXQACiWAAAoljAAKJZgACiWgA
@@ -34800,8 +34800,8 @@
 				uAALT7oAC0+8AAtPvgALT88AC0/gAAtP4gALT+QAC0/m
 				AAtP6AALT+oAC0/7AAtQDAALUA4AC1AQAAtQEgALUBQA
 				C1AWAAtQJwALUDgAC1A6AAtQPAALUD4AC1BAAAtQQgAL
-				UFsAC1B0AAtQdwALUHoAC1B9AAtQgAALUIMAC1CFAAtQ
-				ngALUKAAC1CjAAtQpgALUKgAC1CqAAtQrAALUK4AC1C/
+				UFsAC1B0AAtQdwALUHkAC1B8AAtQfwALUIIAC1CFAAtQ
+				ngALUKAAC1CiAAtQpQALUKcAC1CpAAtQrAALUK4AC1C/
 				AAtQxAALUMcAC1DJAAtSHAALUh4AC1IgAAtSIgALUiUA
 				C1InAAtSKgALUiwAC1IvAAtSMQALUjQAC1I2AAtSOAAL
 				UjoAC1I9AAtSPwALUkEAC1JEAAtSRwALUkoAC1JMAAtS
