update MMCOE page
add postdoctoral fellows

--- a/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
@@ -28,6 +28,7 @@
 				<string>2692D62B-2363-45B1-AFCC-49B01EFA9062</string>
 				<string>276D9F70-1D11-4D68-80CF-D57C57C3601F</string>
 				<string>282EED4A-2AA2-4D56-BD6C-DA4E96510B71</string>
+				<string>2929AC92-47C1-4041-B7AA-DE1603AB1BE4</string>
 				<string>319D5E26-96EB-4784-804E-C34B7B7E4694</string>
 				<string>3A441C35-F8D9-4A30-B8FA-CFABF1874F80</string>
 				<string>3AEC0C81-FC9D-43E1-BA0B-36DC28964204</string>
