--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Partnerships/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-02-24T19:46:40Z</date>
+						<date>2022-03-17T16:40:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -410,6 +410,26 @@
 								<key>Size</key>
 								<integer>165879</integer>
 							</dict>
+							<key>files/stacks-image-72f3273-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pz4EbpM9wkAu
+								v8JSHBkv6A==
+								</data>
+								<key>Size</key>
+								<integer>53718</integer>
+							</dict>
+							<key>files/stacks-image-72f3273-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								VpuC6AVHnGen
+								gITSM+J8uA==
+								</data>
+								<key>Size</key>
+								<integer>93219</integer>
+							</dict>
 							<key>files/stacks-image-82572eb-200x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -500,6 +520,16 @@
 								<key>Size</key>
 								<integer>32722</integer>
 							</dict>
+							<key>files/stacks-image-a07f881-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								FI+2ru2vkR5c
+								Zftl9ZwT0A==
+								</data>
+								<key>Size</key>
+								<integer>34930</integer>
+							</dict>
 							<key>files/stacks-image-a79d539-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -540,6 +570,16 @@
 								<key>Size</key>
 								<integer>53488</integer>
 							</dict>
+							<key>files/stacks-image-b5385af-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								FI+2ru2vkR5c
+								Zftl9ZwT0A==
+								</data>
+								<key>Size</key>
+								<integer>34930</integer>
+							</dict>
 							<key>files/stacks-image-bbaa6d8-400x400.png</key>
 							<dict>
 								<key>Digest</key>
@@ -559,6 +599,26 @@
 								</data>
 								<key>Size</key>
 								<integer>1112371</integer>
+							</dict>
+							<key>files/stacks-image-bbfc46d-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Szrav1mGBvBf
+								GIgF57720Q==
+								</data>
+								<key>Size</key>
+								<integer>56664</integer>
+							</dict>
+							<key>files/stacks-image-bbfc46d-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qxotBYTLMqY9
+								rQDDU/JE6w==
+								</data>
+								<key>Size</key>
+								<integer>100453</integer>
 							</dict>
 							<key>files/stacks-image-bc2cc40-400x400.jpg</key>
 							<dict>
@@ -610,6 +670,16 @@
 								<key>Size</key>
 								<integer>50237</integer>
 							</dict>
+							<key>files/stacks-image-c9c7327-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RnlZAs0A6Dh2
+								dzQTyG3cFg==
+								</data>
+								<key>Size</key>
+								<integer>72285</integer>
+							</dict>
 							<key>files/stacks-image-cde41f6-200x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -650,6 +720,16 @@
 								<key>Size</key>
 								<integer>43659</integer>
 							</dict>
+							<key>files/stacks-image-d5eaa74-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RnlZAs0A6Dh2
+								dzQTyG3cFg==
+								</data>
+								<key>Size</key>
+								<integer>72285</integer>
+							</dict>
 							<key>files/stacks-image-ddd9365-700x116.png</key>
 							<dict>
 								<key>Digest</key>
@@ -669,6 +749,26 @@
 								</data>
 								<key>Size</key>
 								<integer>87197</integer>
+							</dict>
+							<key>files/stacks-image-e22c0eb-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Szrav1mGBvBf
+								GIgF57720Q==
+								</data>
+								<key>Size</key>
+								<integer>56664</integer>
+							</dict>
+							<key>files/stacks-image-e22c0eb-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qxotBYTLMqY9
+								rQDDU/JE6w==
+								</data>
+								<key>Size</key>
+								<integer>100453</integer>
 							</dict>
 							<key>files/stacks-image-e4392ce-290x350.png</key>
 							<dict>
@@ -719,6 +819,26 @@
 								</data>
 								<key>Size</key>
 								<integer>19470</integer>
+							</dict>
+							<key>files/stacks-image-f38745a-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pz4EbpM9wkAu
+								v8JSHBkv6A==
+								</data>
+								<key>Size</key>
+								<integer>53718</integer>
+							</dict>
+							<key>files/stacks-image-f38745a-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								VpuC6AVHnGen
+								gITSM+J8uA==
+								</data>
+								<key>Size</key>
+								<integer>93219</integer>
 							</dict>
 							<key>files/stacks-image-f3d6f69-400x400.png</key>
 							<dict>
@@ -790,35 +910,45 @@
 								<key>Size</key>
 								<integer>621169</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page70.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HyD6+tkaRoOd
-								p9Wd3e4r4g==
+								AMFvr31dfld3
+								OTFA35LQZg==
 								</data>
 								<key>Size</key>
-								<integer>329523</integer>
+								<integer>332719</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pbOFtqUX+h+t
-								xAtXIkRK5A==
+								LvIBfjiFhUM4
+								g9nVjYQugw==
 								</data>
 								<key>Size</key>
-								<integer>26577</integer>
+								<integer>26899</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fg48M2uv0ZBl
-								PqX0G5a0sw==
+								sN1C8BiznR+W
+								Dql9VORPrQ==
 								</data>
 								<key>Size</key>
-								<integer>217025</integer>
+								<integer>222446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
