--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -8,6 +8,7 @@
 		<string>page16</string>
 		<string>page87</string>
 		<string>page35</string>
+		<string>page69</string>
 	</array>
 	<key>pageInspectorVisible</key>
 	<false/>
@@ -16,10 +17,10 @@
 	<key>projectViewWidth</key>
 	<real>248</real>
 	<key>selectedInspectorTab</key>
-	<string>info</string>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page7</string>
+		<string>page70</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
