update Talkboctopus page
add title, abstract for Mirta Galesic

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-03-15T16:48:45Z</date>
+						<date>2022-03-17T21:44:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -884,8 +884,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AIyF3zdgtJn6
-								Am4B3W+Cig==
+								SfzygFkn54HC
+								XwQvrfckqw==
 								</data>
 								<key>Size</key>
 								<integer>501967</integer>
@@ -894,8 +894,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								P9qAe7+4rrDY
-								I0vdntN/Yg==
+								aRpM29MNfpVf
+								TAl8jTeggA==
 								</data>
 								<key>Size</key>
 								<integer>28658</integer>
@@ -904,11 +904,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								APxIiMFOeCao
-								agQ5uq39sA==
+								ESFmQZZVxM+8
+								iBHJf3/Gyw==
 								</data>
 								<key>Size</key>
-								<integer>322446</integer>
+								<integer>323366</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
