update press draft
add filter by URL

--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/1-Research-Groups/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/1-Research-Groups/Data/Contents.plist
@@ -269,7 +269,7 @@
 				bOFs4mznbOps8Wz3bPptAW0IbQ9tFm0abR5tSm1NbU5t
 				T21fbWNtaG1rbXJteG17bYJtiW2QbZdtm22fbddt2m3b
 				bdxt4W3kbett8W30bftuAm4JbhBuFG4YbhluJ24obilu
-				Km4vbjNuNG4+bkFuRG5wbnNudG51bnZuhm6Kbo9ukm6Z
+				Km4ubi9uNG4+bkFuRG5wbnNudG51bnZuhm6Kbo9ukm6Z
 				bp9upG6rbrJuuW7AbvBu8W72bv1vBW8GbwpvC28QbxNv
 				Pm9Bb0JvQ29Ib0tvUm9Yb1tvYm9pb3Bvd297b35vqW+s
 				b61vrm+zb7ZvvW/Db8ZvzW/Ub9tv4m/mb+lwFXAYcBlw
@@ -1222,11 +1222,11 @@
 				gQJdgH2BAl6vEDYLlwuYADkLmgubADsLnQueADsAOwLG
 				AFILowKZADsLpgA5ADkCtQuqC6sBPQutADsLrwuwC7EL
 				sguzC7QLtQA5C7cAOwu5C7oAOQA5ADkLvgu/C8AAOwA5
-				ADkLxAvFADsAOQBaADkLygvLADmBAl+BAmCABoECYYEC
+				ADkLxAvFADsAOQA5C8kAWgvLADmBAl+BAmCABoECYYEC
 				bYAFgQJvgQJwgAWABYDxgAuBAnKAtoAFgQJzgAaABoDS
 				gQJ0gQJ2gC6BAneABYECeoECfYECfoECf4ECgIECgYEC
 				goAGgQKDgAWBAoSBAoaABoAGgAaBAoiBAomBAouABYAG
-				gAaBAoyBAo2ABYAGgAmABoECjoECkYAGgBdYbWVudUZv
+				gAaBAoyBAo2ABYAGgAaBAo6ACYECkYAGgBdYbWVudUZv
 				bnRVc3R5bGVbZml4ZWRTaGFkb3daaGFsZkhlaWdodFls
 				b2dvU21hbGxfEA9oaWRlVGl0bGVNb2JpbGVVYWxpZ25Z
 				bG9nb0xhcmdlWnNob3dQYXJlbnRYc2hvd0xvZ29YdGl0
@@ -1242,9 +1242,9 @@
 				c3RvbVpsb2dvTWVkaXVtWXRleHRDb2xvcl1mdWxsV2lk
 				dGhNZW51V2NvbnRhaW5cY3VzdG9tU2l6aW5nWmJyZWFr
 				cG9pbnRWc2xvZ2FuXxAQaGlkZVNsb2dhbk1vYmlsZV8Q
-				D2NvbGxhcHNlSGVhZGluZ1tmaXhlZE9mZnNldF8QEHN1
-				Ym1lbnVJbmRpY2F0b3JYZm9udFNpemVbem9uZURpdmlk
-				ZXJfEBBmb250LWZhbWlseS10ZXh0VXNvbGlk0wCxAHcA
+				D2NvbGxhcHNlSGVhZGluZ1t6b25lRGl2aWRlclhmb250
+				U2l6ZVtmaXhlZE9mZnNldF8QEHN1Ym1lbnVJbmRpY2F0
+				b3JfEBBmb250LWZhbWlseS10ZXh0VXNvbGlk0wCxAHcA
 				LAwGDA0AtKYMBwwIDAkMCgwLDAyBAmKBAmOBAmSBAmWB
 				AmaBAmemDA4MDwA7DBEMEgwTgQJogQJpgAWBAmqBAmuB
 				AmyAF1RhcmcxUmlkVXJvdW5kVGFyZzJYb3BlcmF0b3JU
@@ -6191,14 +6191,14 @@
 				Y2UuIEl0cyBtYWpvciByZXNlYXJjaCBmb2NpIGFyZSBl
 				bXBpcmljYWwgbWFya2V0IG1pY3Jvc3RydWN0dXJlIGFu
 				ZCBhZ2VudC1iYXNlZCBtb2RlbGluZyBvZiBmaW5hbmNp
-				YWwgbWFya2V0cy4gCgrTALEAdwAsbhpuIBHEpW4bEcBu
-				HRG/bh+BEDuBA1+BEDyBA16BED2lbiFuIiHhbiRuIYEQ
-				PoEQP4EGJYEQQYEQPoEDZV1OU1N0cm9rZUNvbG9yVk5T
-				S2VybldOU0NvbG9y1QU2AIAAgQU3ACxuK24sAHUFOgCD
-				TxAYMC4xMjk0MSAwLjE0NTEgMC4xNjA3OCAxTxAoMC4w
-				OTgwMDA5NTg1NiAwLjEwODc3NjI1NjQgMC4xMjA0NTMw
-				NDQ4AIEBOIAP1BHQEdER0gAsbjAR1G4xEdYjQDAAAAAA
-				AACBEECBA2RdSGVsdmV0aWNhTmV1ZdYRyG41ACxuNm43
+				YWwgbWFya2V0cy4gCgrTALEAdwAsbhpuIBHEpRHAbhxu
+				HRG/bh+BA1+BEDuBEDyBA16BED2lbiFuIiHhbiRuIoEQ
+				PoEQQIEGJYEQQYEQQIEDZV1OU1N0cm9rZUNvbG9yVk5T
+				S2VybldOU0NvbG9y1BHQEdER0gAsbisR1G4sEdYjQDAA
+				AAAAAACBED+BA2RdSGVsdmV0aWNhTmV1ZdUFNgCAAIEF
+				NwAsbjBuMQB1BToAg08QGDAuMTI5NDEgMC4xNDUxIDAu
+				MTYwNzggMU8QKDAuMDk4MDAwOTU4NTYgMC4xMDg3NzYy
+				NTY0IDAuMTIwNDUzMDQ0OACBATiAD9YRyG41ACxuNm43
 				bjhuOQB1KyZuOW48bjlfEBJOU1dyaXRpbmdEaXJlY3Rp
 				b25cTlNUZXh0QmxvY2tzXxAUTlNEZWZhdWx0VGFiSW50
 				ZXJ2YWxbTlNUZXh0TGlzdHOBEEKBB4OBEEIjQEIAAAAA
@@ -9660,9 +9660,9 @@
 				gAmACYAN0gB3ACyyMQB7pABaAFoAWgBagAmACYAJgAmA
 				DdIAdwAssjgAe6QAWgBaAFoAWoAJgAmACYAJgA3TALEA
 				dwAssj+yWQC0rxAZskAQ5gJUGswDqrJFskayR7JIskmy
-				SrJLskyyTbJOsk+yUAuTslKyU7JUslWyVrJXsliBGiqB
+				SrJLskyyTbJOsk+yUAuSslKyU7JUslWyVrJXsliBGiqB
 				AzKAcYEE2YDQgRorgRosgRotgRougRovgRowgRoxgRoy
-				gRozgRo0gRo1gRo2gQJdgRo3gRo4gRo5gRo6gRo7gRo8
+				gRozgRo0gRo1gRo2gQJcgRo3gRo4gRo5gRo6gRo7gRo8
 				gRo9rxAZslqyW7JcADkAO7JfArUCtbJismOyZAA5smay
 				ZwA5ADmyarJrADmybRD4C74pkgK3snKBGj6BGkCBGkKA
 				BoAFgRpDgNKA0oEaRIEaRYEaR4AGgRpIgRpJgAaABoEa
@@ -9732,9 +9732,9 @@
 				AFoAWgBaAFqACYAJgAmACYAN0gB3ACyznwB7pABaAFoA
 				WgBagAmACYAJgAmADdIAdwAss6YAe6QAWgBaAFoAWoAJ
 				gAmACYAJgA3TALEAdwAss62zxwC0rxAZs64Q5gJUGswD
-				qrJFskaztbO2s7ezuLJLs7qyTbO8sk+yUAuTslKzwbJU
+				qrJFskaztbO2s7ezuLJLs7qyTbO8sk+yUAuSslKzwbJU
 				s8OzxLPFsliBGm+BAzKAcYEE2YDQgRorgRosgRpwgRpx
-				gRpygRpzgRoxgRp0gRozgRp1gRo1gRo2gQJdgRo3gRp2
+				gRpygRpzgRoxgRp0gRozgRp1gRo1gRo2gQJcgRo3gRp2
 				gRo5gRp3gRp4gRp5gRo9rxAZs8izybPKADkAO7JfArUC
 				tbJis9GyZAA5smayZwA5ADmyarJrADmz2xD4C74pkhDm
 				s+CBGnqBGnyBGn+ABoAFgRpDgNKA0oEaRIEagIEaR4AG
@@ -9802,9 +9802,9 @@
 				gA3SAHcALLT8AHukAFoAWgBaAFqACYAJgAmACYAN0gB3
 				ACy1AwB7pABaAFoAWgBagAmACYAJgAmADdMAsQB3ACy1
 				CrUkALSvEBm1CxDmAlQazAOqskWyRrUStRO1FLUVsku1
-				F7JNtRmyT7JQC5OyUrUeslS1ILUhtSKyWIEapYEDMoBx
+				F7JNtRmyT7JQC5KyUrUeslS1ILUhtSKyWIEapYEDMoBx
 				gQTZgNCBGiuBGiyBGqaBGqeBGqiBGqmBGjGBGqqBGjOB
-				GquBGjWBGjaBAl2BGjeBGqyBGjmBGq2BGq6BGq+BGj2v
+				GquBGjWBGjaBAlyBGjeBGqyBGjmBGq2BGq6BGq+BGj2v
 				EBm1JbUmtScAOQA7sl8CtQK1smK1LrJkADmyZrJnADkA
 				ObJqtTYAObU4EPgLvimSEOa1PYEasIEasoEatYAGgAWB
 				GkOA0oDSgRpEgRq2gRpHgAaBGkiBGkmABoAGgRpKgRq4
@@ -9870,9 +9870,9 @@
 				CYAJgAmACYAN0gB3ACy2WQB7pABaAFoAWgBagAmACYAJ
 				gAmADdIAdwAstmAAe6QAWgBaAFoAWoAJgAmACYAJgA3T
 				ALEAdwAstme2gQC0rxAZskAQ5gJUGswDqrJFskayR7JI
-				skmySrJLskyyTbJOsk+yUAuTslKyU7JUslWyVrJXsliB
+				skmySrJLskyyTbJOsk+yUAuSslKyU7JUslWyVrJXsliB
 				GiqBAzKAcYEE2YDQgRorgRosgRotgRougRovgRowgRox
-				gRoygRozgRo0gRo1gRo2gQJdgRo3gRo4gRo5gRo6gRo7
+				gRoygRozgRo0gRo1gRo2gQJcgRo3gRo4gRo5gRo6gRo7
 				gRo8gRo9rxAZtoK2g7aEADkAO7JfArUCtbJitouyZAA5
 				smayZwA5ADmyarU2ADmybRD4C74pkhDmtpqBGtuBGt2B
 				GuGABoAFgRpDgNKA0oEaRIEa4oEaR4AGgRpIgRpJgAaA
@@ -11704,14 +11704,14 @@
 				KAAAnCsAAJwuAACcMQAAnDQAAJw3AACcOgAAnD0AAJw/
 				AACcQgAAnEQAAJxHAACcSgAAnEwAAJxOAACcUAAAnFMA
 				AJxWAACcWQAAnFsAAJxdAACcXwAAnGIAAJxlAACcZwAA
-				nGkAAJxrAACcbQAAnHAAAJxzAACcdQAAnHcAAJyAAACc
+				nGkAAJxrAACcbgAAnHAAAJxzAACcdQAAnHcAAJyAAACc
 				hgAAnJIAAJydAACcpwAAnLkAAJy/AACcyQAAnNQAAJzd
 				AACc5gAAnO8AAJz0AACc/QAAnQoAAJ0QAACdGwAAnSMA
 				AJ0oAACdMAAAnTUAAJ1AAACdSwAAnVMAAJ1dAACdbwAA
 				nXsAAJ2FAACdjwAAnZUAAJ2jAACdrgAAnbgAAJ3CAACd
 				yQAAndUAAJ3hAACd8AAAnfsAAJ4OAACeGQAAniMAAJ4x
-				AACeOQAAnkYAAJ5RAACeWAAAnmsAAJ59AACeiQAAnpwA
-				AJ6lAACesQAAnsQAAJ7KAACe1wAAnuQAAJ7nAACe6gAA
+				AACeOQAAnkYAAJ5RAACeWAAAnmsAAJ59AACeiQAAnpIA
+				AJ6eAACesQAAnsQAAJ7KAACe1wAAnuQAAJ7nAACe6gAA
 				nu0AAJ7wAACe8wAAnvYAAJ8DAACfBgAAnwkAAJ8LAACf
 				DgAAnxEAAJ8UAACfFgAAnxsAAJ8eAACfJAAAnykAAJ8y
 				AACfNwAAn0EAAJ9MAACfTgAAn1AAAJ9VAACfcgAAn3QA
@@ -14757,7 +14757,7 @@
 				AAMa4wADGuUAAxryAAMa9QADGvgAAxr7AAMccAADHH0A
 				AxyIAAMciwADHI4AAxyRAAMclAADHJcAAxyiAAMcpQAD
 				HKgAAxyrAAMcrgADHLEAAxy0AAMcwgADHMkAAxzRAAMc
-				5gADHQEAAx0sAAMdLwADHTEAAx1CAAMdSwADHU4AAx1R
+				4gADHOsAAxzuAAMc8QADHP8AAx0UAAMdLwADHVoAAx1d
 				AAMdXwADHXgAAx2NAAMdmgADHbEAAx29AAMdwAADHcMA
 				Ax3GAAMdzwADHdIAAx3bAAMd3AADHd4AAx3nAAMd6AAD
 				HeoAAx6ZAAMemwADHp0AAx6fAAMeogADHqQAAx6nAAMe
