--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press-DRAFT/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press-DRAFT/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-05-05T22:51:57Z</date>
+						<date>2022-05-06T20:41:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j7Jp0+gALuyy
-								19qhELnppQ==
+								YLM8cyOzJR5B
+								lDFqwEZeEw==
 								</data>
 								<key>Size</key>
-								<integer>56145</integer>
+								<integer>58677</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
