--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -10,13 +10,11 @@
 		<string>page2</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
-	<key>selectedInspectorTab</key>
-	<string>info</string>
 	<key>selectedItems</key>
 	<array>
 		<string>page18</string>
