--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press-DRAFT/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press-DRAFT/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-05-06T20:41:15Z</date>
+						<date>2022-05-13T18:28:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YLM8cyOzJR5B
-								lDFqwEZeEw==
+								xTBm3m4y4+SR
+								MfFF4F7I5w==
 								</data>
 								<key>Size</key>
-								<integer>58677</integer>
+								<integer>59657</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
