--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/5-Press/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-05-16T19:49:35Z</date>
+						<date>2022-05-17T19:31:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xJ1i0WlWhTFm
-								ZlgGG0rYHg==
+								9HfoAWP6ZjJ8
+								XCANkuGDsA==
 								</data>
 								<key>Size</key>
-								<integer>59631</integer>
+								<integer>59596</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
