update research groups pages
add The Joint Lab

--- a/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
@@ -15,6 +15,7 @@
 			<array>
 				<string>00B5C78E-742B-4C60-8F95-B5965EB5B91D</string>
 				<string>03A4C33B-6660-4312-ABB1-DDD1785FF913</string>
+				<string>03A4E24A-BCAF-468C-8F56-E599D4CB4DA2</string>
 				<string>03CF7F39-72C5-47CF-B2AD-ADA4436FFA4B</string>
 				<string>04C37FA2-F645-4F22-A790-774D49CD1D30</string>
 				<string>064D4F7C-3728-4AAC-892D-BCA7A5FB8AA1</string>
