--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/1-Research-Groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/ChildPages/1-Research-Groups/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-06-03T20:51:39Z</date>
+						<date>2022-06-07T21:45:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -160,6 +160,16 @@
 								<key>Size</key>
 								<integer>48323</integer>
 							</dict>
+							<key>files/small-525741.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uMd4+vmj17Hm
+								7vaQdq1Hpg==
+								</data>
+								<key>Size</key>
+								<integer>348385</integer>
+							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
@@ -179,6 +189,16 @@
 								</data>
 								<key>Size</key>
 								<integer>68367</integer>
+							</dict>
+							<key>files/stacks-image-3af7adb.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								29xKdeNM27wS
+								skHsBW8dxw==
+								</data>
+								<key>Size</key>
+								<integer>12119</integer>
 							</dict>
 							<key>files/stacks-image-96b08f6.png</key>
 							<dict>
@@ -230,6 +250,26 @@
 								<key>Size</key>
 								<integer>120165</integer>
 							</dict>
+							<key>files/stacks-image-efeb858.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								UvQY6zh2OyxQ
+								YgNuLFePQA==
+								</data>
+								<key>Size</key>
+								<integer>10237</integer>
+							</dict>
+							<key>files/stacks-image-fe70e28.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								18H3a0iI3q+O
+								UTtYlJPKvw==
+								</data>
+								<key>Size</key>
+								<integer>17247</integer>
+							</dict>
 							<key>files/stacks.css</key>
 							<dict>
 								<key>Digest</key>
@@ -244,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JPnx3QlO3WcJ
-								XE2GfMAD8Q==
+								wecYaVAKN6CQ
+								mR1BStoEsg==
 								</data>
 								<key>Size</key>
-								<integer>159054</integer>
+								<integer>167302</integer>
 							</dict>
 							<key>files/stacks_page_page17.js</key>
 							<dict>
@@ -264,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Km41srpf2Lrh
-								SodvIBgk6g==
+								E/DJYRixBUJm
+								2tph6gfSxQ==
 								</data>
 								<key>Size</key>
-								<integer>84978</integer>
+								<integer>90312</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
