--- a/vermontcomplexsystems-foundation.rw8/Pages/04-Research/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-Research/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-06-03T20:51:39Z</date>
+						<date>2022-06-07T21:45:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -230,6 +230,16 @@
 								<key>Size</key>
 								<integer>120165</integer>
 							</dict>
+							<key>files/stacks-image-efeb858.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								UvQY6zh2OyxQ
+								YgNuLFePQA==
+								</data>
+								<key>Size</key>
+								<integer>10237</integer>
+							</dict>
 							<key>files/stacks.css</key>
 							<dict>
 								<key>Digest</key>
@@ -244,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JPnx3QlO3WcJ
-								XE2GfMAD8Q==
+								AVcXCXSmPE6C
+								LGN8zttbDg==
 								</data>
 								<key>Size</key>
-								<integer>159054</integer>
+								<integer>167302</integer>
 							</dict>
 							<key>files/stacks_page_page22.js</key>
 							<dict>
@@ -264,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jnVoGGHGj5AC
-								a0IG8s9I0g==
+								e5F81/iaX2pu
+								pl0uZkSUng==
 								</data>
 								<key>Size</key>
-								<integer>84736</integer>
+								<integer>90070</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
